refactor: simplify environment variable checks in AppiumLoginTest